--- a/app/src/main/res/xml/appmap.xml
+++ b/app/src/main/res/xml/appmap.xml
@@ -591,7 +591,31 @@
     <item class="com.oneplus.filemanager.HomePageActivity" name="file_manager_one_plus"/>
     <item class="org.mozilla.firefox/org.mozilla.firefox.App" name="firefox" />
     <item class="org.mozilla.firefox.App" name="firefox" />
+    <item class="com.google.android.apps.cultural.web.WebViewActivity" name="arts_and_culture"/>
+    <item class="rk.android.app.clockwidget.activity.HomeActivity" name="clock_widgets"/>
+    <item class="alpacasoft.enlargecorrectimage.MainActivity" name="enlarge_and_correct_image"/>
+    <item class="com.onlineconvert.ocapp.MainActivity" name="file_converter"/>
+    <item class="com.youthhr.fontasy.GoogleFontActivity" name="fontasy"/>
+    <item class="projekt.launcher.ProjektLauncher" name="hyperion"/>
+    <item class="com.iosxpc.wallpapers.MainActivity" name="iosxpc_wallpapers"/>
+    <item class="se.qzx.isoextractor.ui.IsoExtractorLauncherActivity" name="iso_extractor"/>
     <item class="com.fitbit.FirstActivity" name="fitbit"/>
+    <item class="org.proninyaroslav.libretorrent.ui.main.MainActivity" name="libretorrent"/>
+    <item class="rk.android.app.android12_notificationwidget.activities.splash.SplashActivity" name="notification_widget"/>
+    <item class="com.youthhr.phonto.PhontoActivity" name="phonto"/>
+    <item class="com.handycloset.android.photolayers.MainActivity" name="photolayers"/>
+    <item class="com.google.android.apps.photos.scanner.home.HomeActivity" name="photoscan"/>
+    <item class="com.pashapuma.pix.wallpapers.MainActivity" name="pix_wallpapers"/>
+    <item class="com.google.android.apps.tips.TipsMain" name="pixel_tips"/>
+    <item class="com.codebrewgames.pocketcitygame.MainActivity" name="pocket_city"/>
+    <item class="org.catrobat.paintroid.MainActivity" name="pocket_paint"/>
+    <item class="com.rhmsoft.edit.activity.MainActivity" name="quickedit_"/>
+    <item class="rk.android.app.searchbarwidget.activity.HomeActivity" name="search_widget"/>
+    <item class="rk.android.app.shortcutmaker.CommonMethods.SplashScreenActivity" name="shortcut_maker"/>
+    <item class="com.inglesdivino.vectorassetcreator.MainActivity" name="vector_asset_creator"/>
+    <item class="com.google.android.apps.googlevoice.SplashActivity" name="voice"/>
+    <item class="com.youthhr.vont.VontActivity" name="vont"/>
+    <item class="com.playtika.wsop.GameAppActivity" name="wsop"/>
     <item class="com.fitbit.FitbitMobile/com.fitbit.FirstActivity" name="fitbit" />
     <item class="com.fitbit.FitbitMobile/com.fitbit.onboarding.landing.LandingActivity_" name="fitbit" />
     <item class="com.fitbit.FitbitMobile/com.fitbit.onboarding.landing.LandingActivity" name="fitbit" />
