--- a/app/src/main/res/values/changelog.xml
+++ b/app/src/main/res/values/changelog.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Leave empty if you don't want to show changelog date -->
-    <string name="changelog_date" translatable="false">February 9, 2022</string>
+    <string name="changelog_date" translatable="false">February 17, 2022</string>
 
     <!-- Changelog support html formatting
     * <b> for Bold
@@ -10,7 +10,7 @@
     * <u> for Underline
     * <a href="linkUrl">Link Text</a> for links -->
     <string-array name="changelog">
-        <item>Added a few new icons new icon</item>
+        <item>Added a few icons</item>
         <item>If you like my iconpack please consider making a donation</item>
     </string-array>
 
